# projectMaker

./: .gitignore  CHANGELOG.md  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  EXAMPLES.md  LICENSE  README.md  design.md  index.js  package.json  pyproject.toml
projectmaker/: cli.py
projectmaker/core/: ai_client.py  analyzer.py  project.py
src/: generator.js
src/templates/: nodejs.js  python.js  react.js  web.js
tests/: test_ai_client.py  test_analyzer.py  test_cli.py  test_project.py
