[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "projectmaker"
version = "0.1.0"
description = "Interactive AI-powered project brainstorming CLI tool"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]

[project.scripts]
projectmaker = "projectmaker.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
